--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,9 +1,8 @@
 version: 0.1
 
-
-
 phases:
     install:
         commands:
             - apt-get update -y
-            - apt-get install -y maven
+            - apt-get install npm
+            - npm install
