--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,5 +4,5 @@ phases:
     install:
         commands:
             - apt-get update -y
-            - apt-get install npm
+            - apt-get install -y npm
             - npm install
