Install newest nodejs

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,8 +4,11 @@ phases:
     install:
         commands:
             - apt-get update -y
-            - apt-get install -y npm
-            - nodejs --version
+            - wget -qO- https://deb.nodesource.com/setup_6.x | sudo bash -
+            - apt-get install -y nodejs npm
+            - which nodejs
+            - which node
+
     build:
         commands:
             - npm install
