--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,6 +5,7 @@ phases:
         commands:
             - apt-get update -y
             - wget -qO- https://deb.nodesource.com/setup_6.x | sudo bash -
+            - apt-get install -y nodejs
             - which npm
             - which node
 
