--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
-    "less": "2.7.1"
+    "less": "2.7.1",
+    "serverless": "1.4.0"
   },
   "devDependencies": {},
   "scripts": {
