--- a/lambda/serverless.yml
+++ b/lambda/serverless.yml
@@ -20,7 +20,17 @@ service: devcember-app-5
 provider:
   name: aws
   runtime: python2.7
-
+  iamRoleStatements: # permissions for all of your functions can be set here
+    - Effect: Allow
+      Action: # Gives permission to DynamoDB tables in a specific region
+        - dynamodb:DescribeTable
+        - dynamodb:Query
+        - dynamodb:Scan
+        - dynamodb:GetItem
+        - dynamodb:PutItem
+        - dynamodb:UpdateItem
+        - dynamodb:DeleteItem
+      Resource: "arn:aws:dynamodb:us-east-1:*:*"
 # you can overwrite defaults here
 #  stage: dev
 #  region: us-east-1
@@ -60,6 +70,13 @@ functions:
         - http:
             path: comments/list
             method: get
+            cors: true
+  postComment:
+    handler: handler.postComment
+    events:
+        - http:
+            path: comments/post
+            method: post
             cors: true
 
 #    The following are a few example events you can configure
